feat: adjusting api 2.0 for new filters
